<resources>
    <string name="app_name">PetIntoAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_your_password"><u>Forget your password?</u></string>
    <string name="already_have_an_account_sign_in"><i>Already have an account?</i><u><b> Sign in</b></u></string>
    <string name="product">Product</string>
    <string name="order">Order</string>
    <string name="booking">Booking</string>
    <string name="pet">Pet</string>
    <string name="profile">Profile</string>
    <string name="success_condition">Success</string>
    <string name="clear_all"><u>Clear all</u></string>
    <string name="missing_email">Please fill in a email</string>
    <string name="invalid_email">Please fill in a valid email</string>
    <string name="check_email_reset">Please check your email inbox to reset your password</string>
    <string name="not_found_account">This account could not be found</string>
    <string name="send_email_success">Send email to reset password successfully</string>
</resources>