<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/productManagementFragment"
            android:title="@string/product"
            android:icon="@drawable/foot_icon"
            />
    <item android:id="@+id/orderManagementFragment"
        android:title="@string/order"
        android:icon="@drawable/foot_icon"/>
    <item android:id="@+id/bookingManagementFragment"
        android:title="@string/booking"
        android:icon="@drawable/foot_icon"/>
    <item android:id="@+id/petManagmentFragment"
        android:title="@string/pet"
        android:icon="@drawable/foot_icon"/>
    <item android:id="@+id/adminProfileFragment"
        android:title="@string/profile"
        android:icon="@drawable/foot_icon"/>
</menu>